# growpacity

./: .gitignore  .gitmodules  README-old.md  README.md  example.ipynb  growpacity.py  meson.build  paper.md  pyproject.toml  refs.bib
.github/workflows/: draft-pdf.yml
docs/source/: conf.py  growpacity.rst  index.rst  installation.rst  modules.rst  usage.rst
growpacity/: __init__.py  growpacity.c  growpacity.py  growpacity_api.h  growpacity_python.c  meson.build
growpacity/data/: meson.build
paper/: paper.md  refs.bib
tests/: README.md  example.ipynb  test.py  test_growpacity.py
tests/exact-opacities/: dustkappa_a5.00e-1_q-3.60.inp  dustkappa_a5.00e-4_q-3.20.inp
